--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,9 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "lib",
+    "outDir": "dist",
     "declaration": true
   },
-  "lib": ["es2015", "dom"],
+  "lib": ["es2015"],
   "include": ["src"]
 }
